feat: connect Airflow & fetch implementing connect & list symbols

--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,3 +1,5 @@
 requests
 requests-oauthlib
 apache-airflow==2.9.2 --constraint https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.10.txt
+vnstock3
+ipython
