--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ requests = "^2.32.3"
 vnstock3 = "^0.3.0.8"
 ipykernel = "^6.29.5"
 numpy = "1.26.4"
-
+IPython = "^8.0" 
 
 [build-system]
 requires = ["poetry-core"]
