--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -3,3 +3,4 @@ requests-oauthlib
 apache-airflow==2.9.2 --constraint https://raw.githubusercontent.com/apache/airflow/constraints-2.9.2/constraints-3.10.txt
 vnstock3
 ipython
+boto3
