--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ x-airflow-common:
     AIRFLOW__API__AUTH_BACKEND: 'airflow.api.auth.backend.basic_auth'
     AIRFLOW_CONN_POSTGRES_DEFAULT: postgres://airflow:airflow@postgres:5432/airflow
     PYTHONPATH: /opt/airflow/src
+  env_file:
+    - ./airflow/airflow.env
   volumes:
     - ${AIRFLOW_DAGS}:/opt/airflow/dags
     - ${AIRFLOW_LOGS}:/opt/airflow/logs
