--- a/spark/spark-defaults.conf
+++ b/spark/spark-defaults.conf
@@ -1,5 +1,5 @@
 # Jars required for Delta Lake and AWS integration
-spark.jars                           jars/delta-core_2.12-2.2.0.jar,jars/hadoop-aws-3.3.2.jar,jars/delta-storage-2.2.0.jar,jars/aws-java-sdk-1.12.367.jar,jars/s3-2.18.41.jar,jars/aws-java-sdk-bundle-1.11.1026.jar
+spark.jars                           jars/delta-core_2.12-2.2.0.jar,jars/hadoop-aws-3.3.4.jar,jars/delta-storage-2.2.0.jar,jars/aws-java-sdk-1.12.367.jar,jars/s3-2.18.41.jar,jars/aws-java-sdk-bundle-1.11.1026.jar
 
 # Spark SQL configurations for Delta Lake
 spark.sql.extensions                 io.delta.sql.DeltaSparkSessionExtension
@@ -12,3 +12,5 @@ spark.hadoop.fs.s3a.secret.key      minio123
 spark.hadoop.fs.s3a.path.style.access true
 spark.hadoop.fs.s3a.connection.ssl.enabled false
 spark.hadoop.fs.s3a.impl             org.apache.hadoop.fs.s3a.S3AFileSystem
+
+spark.master                    spark://spark-master:7077
