--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,6 +123,7 @@ services:
 
   spark-master:
     <<: *spark-common
+    container_name: spark-master
     # command: bin/spark-class org.apache.spark.deploy.master.Master
     ports:
       - "8080:8080"
