--- a/notebooks/spark-defaults.conf
+++ b/notebooks/spark-defaults.conf
@@ -1,14 +1,14 @@
-# Jars required for Delta Lake and AWS integration
-spark.jars                           /usr/local/spark/jars/delta-core_2.12-2.2.0.jar,/usr/local/spark/jars/hadoop-aws-3.3.4.jar,/usr/local/spark/jars/delta-storage-2.2.0.jar,/usr/local/spark/jars/aws-java-sdk-1.12.367.jar,/usr/local/spark/jars/s3-2.18.41.jar,/usr/local/spark/jars/aws-java-sdk-bundle-1.11.1026.jar   
-
-# Spark SQL configurations for Delta Lake
-spark.sql.extensions                 io.delta.sql.DeltaSparkSessionExtension
-spark.sql.catalog.spark_catalog      org.apache.spark.sql.delta.catalog.DeltaCatalog
-
-# S3 configuration
-spark.hadoop.fs.s3a.endpoint         http://minio:9000
-spark.hadoop.fs.s3a.access.key      minio
-spark.hadoop.fs.s3a.secret.key      minio123
-spark.hadoop.fs.s3a.path.style.access true
+# AWS S3 Configuration
+spark.hadoop.fs.s3a.impl                org.apache.hadoop.fs.s3a.S3AFileSystem
+spark.hadoop.fs.s3a.endpoint            http://minio:9000
+spark.hadoop.fs.s3a.access.key          minio
+spark.hadoop.fs.s3a.secret.key          minio123
+spark.hadoop.fs.s3a.path.style.access   true
 spark.hadoop.fs.s3a.connection.ssl.enabled false
-spark.hadoop.fs.s3a.impl             org.apache.hadoop.fs.s3a.S3AFileSystem
+
+# Load AWS JARs (hadoop-aws compatible with Spark 3.3.4)
+spark.jars                              /usr/local/spark/jars/hadoop-aws-3.3.4.jar,/usr/local/spark/jars/aws-java-sdk-bundle-1.12.262.jar
+
+# Delta Lake (nếu dùng)
+spark.sql.extensions                            io.delta.sql.DeltaSparkSessionExtension
+spark.sql.catalog.spark_catalog                 org.apache.spark.sql.delta.catalog.DeltaCatalog
